--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,7 +7,7 @@ body {
 }
 #main-visual {
   height: 100vh;
-  background-image: url("../images/main/bg_main_visual.jpg");
+  background-image: url("./images/main/bg_main_visual.jpg");
   background-position: 0 0;
   background-repeat: no-repeat;
   background-size: cover;
@@ -31,13 +31,13 @@ body {
       background-size: cover;
     }
     .visual01 {
-      background-image: url("../images/main/main_visual_img1.png");
+      background-image: url("./images/main/main_visual_img1.png");
     }
     .visual02 {
-      background-image: url("../images/main/main_visual_img2.png");
+      background-image: url("./images/main/main_visual_img2.png");
     }
     .visual03 {
-      background-image: url("../images/main/history_img2.jpg");
+      background-image: url("./images/main/history_img2.jpg");
     }
   }
   > .contents {
@@ -422,7 +422,7 @@ body {
 }
 
 #about {
-  background: url("../images/main/bg_main_about.jpg") no-repeat 50%;
+  background: url("./images/main/bg_main_about.jpg") no-repeat 50%;
   background-size: cover;
   color: #fff;
   .container {
@@ -481,7 +481,7 @@ body {
           transition: all 0.25s ease;
           &:hover {
             background-color: rgba(255, 255, 255, 1);
-            background-image: url("../images/main/bg_watermark.png");
+            background-image: url("./images/main/bg_watermark.png");
             background-repeat: no-repeat;
             color: $main-color;
             &:before {
@@ -569,7 +569,7 @@ body {
 }
 #community {
   padding-bottom: 100px;
-  background: url("../images/main/bg_main_community.jpg") no-repeat 50%;
+  background: url("./images/main/bg_main_community.jpg") no-repeat 50%;
   background-size: cover;
   color: #fff;
   .container {
